Fix z-index issues with main dropdown and region settings sidebar.

--- a/styles/sass/partials/_region.scss
+++ b/styles/sass/partials/_region.scss
@@ -33,6 +33,7 @@
 	position: fixed;
 	top: 0;
 	left: 0;
+	z-index: 10001003;
 }
 
 .upfront-bg-setting-type {
