--- a/styles/sass/partials/_sidebar-ui.scss
+++ b/styles/sass/partials/_sidebar-ui.scss
@@ -1169,21 +1169,26 @@ span.draggable-post-element.element-dragging
 #sidebar-ui .upfront-post-trash a:hover{
 	color: #E3474A;
 }
+
 #sidebar-ui [class^=command-],
 #sidebar-ui [class^=sidebar-command-]{
   overflow: hidden;
   white-space:nowrap;
   max-width: 230px;
 }
+
 #sidebar-ui .sidebar-commands li.themes-dropdown{
   float: left;
   margin-bottom: 15px;
   width: 230px;
 }
-#sidebar-ui.element-settings-activated {
+
+#sidebar-ui.element-settings-activated, #sidebar-ui.region-settings-activated {
 	position: static;
 }
-#sidebar-ui.element-settings-activated ul.sidebar-commands.sidebar-commands-header {
+
+#sidebar-ui.element-settings-activated ul.sidebar-commands.sidebar-commands-header,
+#sidebar-ui.region-settings-activated ul.sidebar-commands.sidebar-commands-header {
 	z-index: 10001004;
     position: fixed;
     top: 0;
